manifests/hello-blue-whale/ingress.https.selfsigned.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-whale-https-self-signed
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: self.secure.hello.minikube.local
      http:
        paths:
          - path: /blue/(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-blue-whale-svc
                port:
                  number: 80
  tls:
    - hosts:
        - self.secure.hello.minikube.local
      secretName: hello-blue-whale-local-cert-tls
