manifests/hello-blue-whale/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-whale-http
  annotations:
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello.minikube.local
      http:
        paths:
          - path: /blue/(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-blue-whale-svc
                port:
                  number: 80
